# supersilver

./: .gitignore  CLAUDE.md  Cargo.toml  supersilver.service
.cargo/: config
controller/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build.rs  memory.x  rust-toolchain.toml
controller/bootloader/: Cargo.toml  build.rs  memory.x
controller/bootloader/src/: main.rs
controller/src/: encoder.rs  main.rs  usb.rs
host/: Cargo.toml  supersilver.service
host/src/: main.rs
parts/knobplate/: Cargo.toml
parts/knobplate/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
src/: main.rs
