[package]
name = "supersilver-controller"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Firmware for Supersilver controller — dual rotary encoder volume control on RP2040"

[[bin]]
name = "controller"
path = "src/main.rs"

[dependencies]
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
adafruit-seesaw = { version = "0.13.0", features = ["defmt"] }
embedded-hal = "1.0"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

[profile.release]
debug = true
opt-level = "s"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = "z"
debug = true
