[package]
name = "supersilver-controller"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Firmware for Supersilver controller — dual rotary encoder volume control on RP2040"

[[bin]]
name = "controller"
path = "src/main.rs"

[dependencies]
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "time-driver", "rp2040", "boot2-w25q080"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.6", features = ["defmt"] }
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-boot-rp = { version = "0.10", features = ["defmt"] }
embassy-embedded-hal = { version = "0.6" }
embassy-usb-dfu = { version = "0.3", features = ["dfu", "cortex-m"] }
supersilver-protocol = { path = "../protocol" }
postcard = "1"
adafruit-seesaw = { version = "0.13.0", features = ["defmt"] }
embedded-hal = "1.0"
static_cell = "2"
portable-atomic = { version = "1", features = ["critical-section"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

[profile.release]
debug = true
