[package]
name = "supersilver-host"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Host-side reader for Supersilver controller encoder data over USB CDC ACM"

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
supersilver-protocol = { path = "../protocol" }
postcard = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-serial = "5"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
