[package]
name = "supersilver-host"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Host-side reader for Supersilver controller encoder data over USB CDC ACM"

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
supersilver-protocol = { path = "../protocol" }
nusb = { version = "0.2", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "io-util"] }
