[package]
name = "supersilver-bootloader"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "DFU bootloader for Supersilver controller (RP2040)"

[[bin]]
name = "bootloader"
path = "src/main.rs"

[dependencies]
embassy-rp = { version = "0.9.0", features = ["time-driver", "critical-section-impl", "rp2040"] }
embassy-boot-rp = { version = "0.9.0" }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.5.0" }
portable-atomic = { version = "1", features = ["critical-section"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "1.0"
defmt-rtt = "1.0"
panic-reset = "0.1"

[profile.release]
debug = true
